assets/scss/sections/_profile.scss
/* ... */
.templates-item {
  padding: 5px 25px;
  .dots {
    position: relative;
  }
  .toggle {
    display: flex;
    align-items: center;
    flex-shrink: 0;
    margin-left: 20px;
    .cursor-pointer {
      display: inline-block;
      padding: 4px 8px;
      margin-right: -8px;
    }
  }
  &_params {
    .row {
      padding: 25px 0 10px;
      .col-auto {
        width: 20%;
      }
      .param {
        span:first-child {
          margin-bottom: 5px;
        }
      }
    }
    & > hr {
      position: absolute;
      top: 46px;
      left: 0;
      width: 100%;
      margin: 0;
    }
  }
}

.croppa-image {
  &.auto-size {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
  &.prevent-move {
    cursor: default !important;
  }
}

.increase-balance {
  &-info {
    padding: 20px 0;
    text-align: center;
    p {
      font-size: 16px;
      font-weight: 500;
      margin-bottom: 0;
    }
    i {
      font-size: 50px;
    }
    strong {
      display: block;
      font-size: 30px;
      font-weight: 500;
      i {
        font-size: 30px;
      }
    }
  }
  &-form {
    p {
      margin-bottom: -5px;
    }
  }
  &-animation{
    animation-name: example;
    animation-duration: 1s;
    z-index: 1;
    animation-timing-function: ease-in-out;
  }
  @keyframes example {
    0%   {transform: scale(1);}
    50%  {transform: scale(1.05);}
    100% {transform: scale(1);}
  }
}

.cover-with-avatar {
  position: relative;
  margin: -25px -25px 18px;
  padding-bottom: 55px;
  .socials {
    display: flex;
    position: absolute;
    top: 20px;
    right: 20px;
    a {
      display: flex;
      align-items: center;
      justify-content: center;
      font-size: 20px;
      border-radius: 4px;
      width: 40px;
      height: 40px;
      color: $dark-blue-2;
      background-color: $white;
      margin-left: 20px;
      cursor: pointer;
      transition: .2s ease;
      &:hover {
        color: $white;
        background-color: $dark-blue-2;
      }
    }
  }
  .cover {
    width: 100%;
    height: 0;
    padding-bottom: 25%;
    background-position: center;
    background-size: cover;
    border-radius: 4px 4px 0 0;
  }
  .avatar {
    margin: 0;
    position: absolute;
    bottom: 0;
    left: 50%;
    margin-left: -55px;
    width: 110px;
    height: 110px;
    border: 5px solid $white;
  }
  .badge {
    position: absolute;
    bottom: 75px;
    left: 20px;
    background-color: $dark-blue-2;
    color: $white;
    font-weight: 500;
    text-transform: uppercase;
    padding: 11px 20px;
    border-radius: 4px;
  }
  .edit-link {
    position: absolute;
    bottom: 0;
    top: auto;
    right: 25px;
  }
}

.dark-mode {
  .cover-with-avatar {
    .avatar {
      border-color: $dark-2;
    }
    &_edit {
      .avatar_edit:not(.cover) {
        border-color: $dark-2;
      }
    }
  }
  .profile-card {
    .avatar {
      background-color: $dark-3;
    }
    .profile {
      &_info {
        &-details {
          border-bottom-color: $dark-1;
        }
      }
    }
  }

  .payment-history-info {
    color: $yellow-1;
  }
  .payment-history-rows {
    .row {
      border-top-color: $dark-1;
      .payment-period,
      .payment-date {
        color: $grey-4;
      }
    }
  }
}
/* ... */

